--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,7 +123,7 @@
     <string name="api_key_subtitle_2">Find the API keys menu from your account settings and copy the default key.</string>
     <string name="api_key_title_3">Enter the key to the app</string>
     <string name="api_key_subtitle_3">Paste the key into the field above and save it. Once the key is activated the weather will become visible.</string>
-    <string name="action_open_provider">Go to OpenWeatherMap.com</string>
+    <string name="action_open_provider">Go to OpenWeatherMap.org</string>
     <string name="api_key_info_all_set">It may take up to ten minutes before your API key is activated. The weather will be updated as soon as it is available.</string>
     <string name="settings_weather_icon_pack_title">Icon pack</string>
     <string name="settings_weather_icon_pack_default">Icon pack %d</string>
