--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -25,6 +25,18 @@
     <string name="global_style_header">Widget</string>
     <string name="action_capitalize_the_date">Date en majuscules</string>
     <string name="settings_date_format_title">Format de date</string>
+    <string name="header_widget_background">Arrière-plan</string>
+    <string name="settings_secondary_row_top_margin_title">Marge intermédiaire</string>
+    <string name="action_custom_font_to_search">Police personnalisée...</string>
+    <string name="font_100">Thin</string>
+    <string name="font_200">Light</string>
+    <string name="font_300">Book</string>
+    <string name="font_400">Regular</string>
+    <string name="font_500">Medium</string>
+    <string name="font_600">Semi-bold</string>
+    <string name="font_700">Bold</string>
+    <string name="font_800">Black</string>
+    <string name="font_900">Heavy</string>
 
     <!-- Calendar -->
     <string name="settings_calendar_title">Calendrier</string>
@@ -70,6 +82,13 @@
     <string name="settings_widget_update_frequency_high">Élevée</string>
     <string name="filters_header">Filtres</string>
     <string name="event_detail_header">Détails</string>
+    <string name="settings_attendee_status_title">Statut de présence</string>
+    <string name="settings_attendee_status_subtitle">Filtrer les évmts acceptés ou refusés</string>
+    <string name="settings_busy_events_title">Événements pertinents</string>
+    <string name="settings_busy_events_subtitle">Afficher uniquement les évmts\nqui vous occupent</string>
+    <string name="attendee_status_accepted">Événements acceptés</string>
+    <string name="attendee_status_invited">Invitations d'agenda</string>
+    <string name="attendee_status_declined">Événements refusés</string>
 
     <!-- Weather -->
     <string name="settings_weather_title">Météo</string>
@@ -100,10 +119,11 @@
     <string name="api_key_subtitle_2">Recherchez la clé API dans vos paramètres du compte et copiez la clé par défaut.</string>
     <string name="api_key_title_3">Saisissez la clé API dans l\'app</string>
     <string name="api_key_subtitle_3">Collez la clé dans le champ ci-dessus et enregistrez-la. Une fois la clé activée, la météo deviendra visible.</string>
-    <string name="action_open_provider">Aller sur OpenWeatherMap.com</string>
+    <string name="action_open_provider">Aller sur OpenWeatherMap.org</string>
     <string name="api_key_info_all_set">Cela peut prendre jusqu\'à 10 minutes avant que votre clé API soit activée. La météo sera mise à jour dès qu\'elle sera disponible !</string>
     <string name="settings_weather_icon_pack_title">Pack d\'icônes</string>
     <string name="settings_weather_icon_pack_default">Pack d\'icônes %d</string>
+    <string name="background_location_warning">Nous collecterons les données GPS pour mettre à jour les infos météo même lorsque l'app est fermée ou non utilisée.\nNous n'utiliserons pas ces données autrement que pour cela.</string>
 
     <!-- Clock -->
     <string name="settings_clock_title">Horloge</string>
@@ -134,7 +154,7 @@
     <string name="description_show_glance_visible">Services activés</string>
     <string name="description_show_glance_not_visible">Services désactivés</string>
     <string name="settings_sort_glance_providers_title">Priorité des sources de données</string>
-    <string name="settings_sort_glance_providers_subtitle">Modifier l\'importance des fournisseurs</string>
+    <string name="settings_sort_glance_providers_subtitle">Modifier l\'ordre de priorité des fournisseurs</string>
     <string name="settings_custom_notes_title">Notes personnalisées</string>
     <string name="settings_low_battery_level_title">Batterie (en charge/faible)</string>
     <string name="settings_daily_steps_title">Nombre de pas quotidiens</string>
@@ -142,8 +162,10 @@
     <string name="daily_steps_counter">%d pas jusqu\à présent</string>
     <string name="charging">Batterie en charge</string>
     <string name="providers">Fournisseurs</string>
-    <string name="glance_info">Les coups d\'œil n\'apparaîtront que si aucun événement n\'est affiché et uniquement lorsque quelques conditions sont vérifiées.</string>
-
+    <string name="glance_info">Les coups d\'œil n\'apparaîtront que si aucun événement n\'est affiché et uniquement lorsque certaines conditions sont vérifiées.</string>
+    <string name="settings_music_players_filter_title">Lecteurs de musique</string>
+    <string name="settings_music_players_filter_subtitle">Choisissez vos lecteurs de musique préférés</string>
+    
     <!-- Settings -->
     <string name="action_share">Partager</string>
     <string name="action_rate">Noter l\'app</string>
@@ -200,4 +222,7 @@
     <string name="support_dev_subtitle">Ceci est le projet d\'un unique développeur,\ndonc merci pour le soutien !</string>
     <string name="settings_title_integrations">Intégrations</string>
     <string name="label_count_installed_integrations">%d intégrations installées</string>
+    <string name="nothing">Rien</string>
+    <string name="settings_privacy_policy_title"><![CDATA[Legal & Privacy]]></string>
+    <string name="settings_privacy_policy_subtitle">Voir la politique de confidentialité de l'app</string>
 </resources>
